--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Existing styles */
 body, html {
     margin: 0;
     width: 100%;
@@ -8,6 +7,11 @@ body, html {
 }
 #map {
     flex-grow: 1;
+}
+#controls {
+    padding: 10px;
+    background: #fff;
+    text-align: center;
 }
 
 #Menu {
